@@ -1,3 +1,9 @@
+unreleased
+
+* Enhancements
+
+  * Support sqlite in sql steps
+
 2.4.0 / 2012-07-26
 
 * Breaking changes
